--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_bloc: ^8.1.6
   image_picker: ^1.1.2
+  firebase_core: ^3.5.0
 
 dev_dependencies:
   flutter_test:
