--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^5.3.0
   google_sign_in: ^6.2.1
   awesome_dialog: ^3.2.1
+  flutter_toastr: ^1.0.3
+  flutter_facebook_auth: ^7.1.0
 
 dev_dependencies:
   flutter_test:
