--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,17 @@ rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.google.gms:google-services:4.3.10' // تأكد من إضافة هذا السطر
+    }
+}
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
