--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,14 @@ dependencies:
   flutter_bloc: ^8.1.6
   image_picker: ^1.1.2
   firebase_core: ^3.5.0
-  firebase_auth: ^5.3.0
   google_sign_in: ^6.2.1
   awesome_dialog: ^3.2.1
   flutter_toastr: ^1.0.3
   flutter_facebook_auth: ^7.1.0
+  firebase_auth: ^5.3.1
+  sqflite: ^2.4.0
+  path: ^1.9.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
