--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   sqflite: ^2.4.0
   path: ^1.9.0
   shared_preferences: ^2.3.2
+  stylish_bottom_bar: ^1.1.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/bottomBar/
     - assets/auth/
     - assets/auth/token/
     - assets/auth/profile/
