--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.3.2
   stylish_bottom_bar: ^1.1.0
   flutter_svg: ^2.0.10+1
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
