Implement HomeCubit and HomeState; add authentication states; update dependencies and plugin registrations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   stylish_bottom_bar: ^1.1.0
   flutter_svg: ^2.0.10+1
   flutter_inappwebview: ^6.1.5
+  share_plus: ^10.1.1
+  path_provider: ^2.1.5
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
