Add intl package; update error message handling and refactor image properties in models; enhance HomeCubit and UI for better data management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   share_plus: ^10.1.1
   path_provider: ^2.1.5
   http: ^1.2.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
